# skillforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/: github-digest.yaml  hn-monitor.yaml  morning-standup.yaml  pr-review-reminder.yaml  repo-health.yaml
src/skillforge/: cli.py  compiler.py  models.py  serializer.py  storage.py
tests/: test_cli.py  test_compiler.py  test_serializer.py  test_storage.py
