[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillforge"
version = "0.1.0"
description = "Describe workflows in plain English, get production-ready automated agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
skillforge = "skillforge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/skillforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/skillforge --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["src/skillforge"]
omit = ["*/tests/*", "*/venv/*"]

[project.urls]
Homepage = "https://github.com/LakshmiSravyaVedantham/skillforge"
Repository = "https://github.com/LakshmiSravyaVedantham/skillforge"
